# Programacion-C-Clase3

ejemplos/1/: concesionario.c  main.c
ejercicios/1/: 0001-Ejercicio-1-clase-3.patch  configure.ac
ejercicios/1/include/: gestor_tarea.h  tarea.h
ejercicios/1/src/: Makefile.am  gestor_tarea.c  main  main.c  tarea.c
ejercicios/1/valgrind/: valgrind
ejercicios/2/src/: concesionario.c  main.c
ejercicios/3/: coche.c  concesionario.c  main.c
