AC_INIT([main], [1.0], [manuel.pc23@gmail.com])

# Decimos que nos inicia el proyecto usando automake
AM_INIT_AUTOMAKE(main, 1.0)

# Designamos carpeta y programa principal codigo fuente
AC_CONFIG_SRCDIR([src/main.c])
AC_PROG_CC
AC_CHECK_HEADERS([stdlib.h stdint.h stdbool.h])
AC_FUNC_MALLOC

AC_OUTPUT(Makefile src/Makefile)
